# rag

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  sample.env
.github/workflows/: ci-cd.yml
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: document_ingestion.py  embeddings.py  pdf_ingestion.py  rag_training.py  rag_training_v2.py  text_splitting.py  unified_ingestion.py  unified_splitting.py
app/api/v2/: __init__.py  api.py
app/api/v2/endpoints/: __init__.py  rag_training.py
app/core/: config.py  dependencies.py  logging_config.py
app/rag/: __init__.py  csv_excel_loaders.py  document_loaders.py  embeddings.py  json_loaders.py  llm_manager.py  metadata_manager.py  pdf_loaders.py  rag_chain.py  smart_pdf_processor.py  sql_loaders.py  storage.py  text_splitters.py  training_processor.py  unified_loader.py  vector_store.py  word_loaders.py
tests/: __init__.py  conftest.py  test_document_loaders.py  test_main.py  test_pdf_loaders.py  test_text_splitters.py
