[project]
name = "rag-api"
version = "0.1.0"
description = "A simple FastAPI tutorial project"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    # Step 1: Text Data Ingestion
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "python-dotenv==1.0.0",
    "tiktoken>=0.8.0",
    # Step 2: Text Splitting Techniques
    "langchain-text-splitters>=0.0.1",
    # Step 3: PDF Document Ingestion
    "pypdf>=3.0.0",
    "pymupdf>=1.23.0",
    # Step 5: Word Document Ingestion
    "python-docx>=1.1.0",
    # Step 6: CSV and Excel File Parsing
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    # Step 7: JSON File Parsing
    # (JSONLoader uses langchain-community, already included)
    # Step 8: SQL Database Parsing
    "sqlalchemy>=2.0.0",
    # Embeddings
    "langchain-huggingface>=0.0.1",
    "langchain-openai>=0.0.1",
    "numpy>=1.24.0",
    # LLM Providers
    "langchain-groq>=0.0.1",
    # Vector Store
    "chromadb>=0.4.0",
    "langchain-chroma>=0.1.0",
    # File Storage (S3)
    "boto3>=1.28.0",
    "gunicorn",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "torch==2.2.2+cpu; sys_platform != 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.11.0",
    "flake8==6.1.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.11.0",
    "flake8==6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cpu"]